126: removed macos and jdk9-or-newer profiles
inherited from the parent

Task-Url: http://github.com/LorenzoBettini/edelta/issues/126