@@ -224,27 +224,6 @@
       </build>
     </profile>
     <profile>
-      <id>macos</id>
-      <activation>
-        <os>
-          <family>mac</family>
-        </os>
-      </activation>
-      <properties>
-        <!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
-        <platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
-      </properties>
-    </profile>
-    <profile>
-      <id>jdk9-or-newer</id>
-      <activation>
-        <jdk>[9,)</jdk>
-      </activation>
-      <properties>
-        <moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
-      </properties>
-    </profile>
-    <profile>
       <id>release-composite</id>
       <activation>
         <activeByDefault>false</activeByDefault>
